Moved light behind controls
Got rid of numeric readout of index of refraction on prism break tab
Renamed labels for index of refraction: should say "objects" and "environment"
Made "index of refraction (n)" bold
Switched to protractor image with 5 degree tick marks
Turned off reflections by default in prism tab
Renamed to Bending Light
Made the incident beam width independent of incident angle
# 0.00.21 (49147) Feb 23, 2011
Fixed: Reset all should restart the clock if it was paused
Fixed: Default laser angle should be smaller or zero in prism tab
Fixed: Prisms aren't removed on reset all
Fixed: Intensity meter causes incorrect wave mode representation (phase is incorrect)
Fixed: Toolbox objects should move slightly when clicked (to cue user that they are draggable)
Fixed: Wavelength doesn't reset
Made it so that an object's center must be over the toolbox for it be removed from the play area (instead of any intersection)
Fixed: Prisms toolbox items take up more space than necessary
Made it possible to drag out multiple prisms with the same shape
Added reset all for the first tab
Fixed: Keep track of whether the module is active for making sure only one clock is running at a time
Fixed layer for intensity meter
Fixed: light rays should be in the front layer
Turned "normal" off by default in prism tab
Added a diverging lens
Removed wave mode in prism tab
# 0.00.20 (49059) Feb 18, 2011
Added Bresenham algorithm for white light
# 0.00.19 (49047) Feb 17, 2011
Added a test for additive color blending
# 0.00.18 (49018) Feb 16, 2011
Fixed: initial ray is black
Fixed: initial value of wavelength slider is incorrect
Added normal lines
Rearranged controls
Added a control to show/hide reflections
Improved dispersion function
Added dispersion
Added a wavelength control
# 0.00.17 (48938) Feb 15, 2011
Added a toolbox for prisms
Added a laser control panel
Added an option for multiple rays
Added total internal reflection
Added a trapezoid prism
Added a hemi-circular prism