@@ -1,3 +1,4 @@
+Converted radio buttons for reflections into checkbox
 Moved light behind controls
 Got rid of numeric readout of index of refraction on prism break tab
 Renamed labels for index of refraction: should say "objects" and "environment"
